feat: complete local authentication
