# src/identity/auth/dtos/auth.dtos.ts
@@ -1,0 +1,37 @@
+import { User } from '@prisma/client';
+import {
+  IsEmail,
+  IsNotEmpty,
+  IsString,
+  Matches,
+  MinLength,
+} from 'class-validator';
+
+export class LoginRequestDTO {
+  @IsEmail()
+  @IsNotEmpty()
+  email: string;
+
+  @IsString({ message: 'Password must be a string' })
+  @IsNotEmpty()
+  password: string;
+}
+
+export class LoginResponseDto {
+  token: string;
+  user: Partial<User>;
+}
+
+export class RegisterRequestDto {
+  @IsString()
+  @IsEmail()
+  @IsNotEmpty()
+  email: string;
+  @IsString({ message: 'Password must be a string' })
+  @MinLength(5, { message: 'Password must be at least 5 characters long' })
+  @Matches(/^(?=.*[0-9])(?=.*[!@#$%^&*])/, {
+    message:
+      'Password must contain at least one number and one special character',
+  })
+  password: string;
+}
